# task.sh

./: .gitignore  404.html  CNAME  Cargo.toml  LICENSE  README.md  api.html  cross.html  demo.html  index.html  installation.html
.github/workflows/: deploy.yml  release.yml  rust.yml
docs/: CNAME  README.md  book.toml
docs/book/: print.html  publishing.html  searchindex.js  toc.html  toc.js  usage.html
docs/src/: SUMMARY.md  api.md  cross.md  installation.md  overview.md  publishing.md  usage.md
scripts/: build-cross.sh  publish.sh
src/: config.rs  generator.rs  main.rs
tests/: integration.rs
