[profile.release]
codegen-units = 1
lto = true
strip = "debuginfo"
[package]
name = "task-sh"
version = "0.1.2"
edition = "2024"
authors = ["task.sh Contributors <hello@task.sh>"]
description = "AI-powered shell command generator"
license = "MIT"
homepage = "https://task.sh"
repository = "https://github.com/barledge/task.sh"
documentation = "https://task.sh/docs"
readme = "README.md"
keywords = ["cli", "ai", "shell", "openai"]
categories = ["command-line-utilities", "text-processing"]
default-run = "task"
publish = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items"]

[[bin]]
name = "task"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-openai = "0.19"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
colored = "2.1"
dotenvy = "0.15"
dirs = "5.0"
indicatif = "0.17"
rand = "0.8"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
shellexpand = "3.1"
toml = "0.8"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
atty = "0.2"
once_cell = "1.19"
rpassword = "7.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serial_test = "2.0"
tokio-test = "0.4"
mdbook = "0.4"
tempfile = "3.10"
